momentuHMM 2.0.0 2023-08-21
-----------------
NEW FEATURES

* many (but not all) models can now be fitted using the optimization routine of TMB by setting optMethod='TMB'

* continuous-time hidden Markov models can now be fitted using 'fitCTHMM' (and 'MIfitCTHMM') and simulated using 'simCTHMM' (or 'simHierCTHMM' for hierarchical continuous-time models)

* new data stream distribution "ctds" for (multistate) continuous-time discrete-space movement models, which can be prepared, fitted, and simulated using the functions 'prepCTDS', 'fitCTHMM' (or 'MIfitCTHMM'), and 'simCTDS' (or 'simHierCTDS' for hierarchical models), respectively.

* special pseudo-design matrix function 'langevin' has been added for simulating and fitting discrete-time approximations of the (multistate) Langevin diffusion model as a multivariate normal random walk (i.e. using the "rw_mvnorm2" or "rw_mvnorm3" data stream distributions)

* 'export' argument added to simulation functions for exporting formula objects from the global environment when ncores>1

* 'colors' argument added to 'plotSpatialCov' function for specifying raster colors

* 'gradient' argument added to 'prepData' and 'simData' for calculating gradients of spatial covariates using bilinear interpolation

* 'ncores' argument added to 'fitHMM' (and 'fitCTHMM') for attempting 'retryFits' in parallel

CHANGES

* multivariate normal data stream distributions (e.g., 'mvnorm2', 'rw_mvnorm2') are now parameterized and ordered in terms of means (e.g., 'mean.x', 'mean.y'), standard deviations (e.g., 'sd.x', 'sd.y'), and correlations (e.g. 'corr.xy')

* when the probability density for a data stream observation is zero for all states, a warning is triggered and .Machine$double.xmin is used to avoid division by zero within the forward algorithm

* 'fixPar' argument cannot be specified for circular distribution parameters unless 'DM' is also specified
