@@ -2,7 +2,7 @@ Package: momentuHMM
 Type: Package
 Title: Maximum Likelihood Analysis of Animal Movement Behavior Using Multivariate Hidden Markov Models
 Version: 2.0.0
-Date: 2023-08-21
+Date: 2024-02-02
 Depends:
     R (>= 2.10)
 Author: Brett McClintock, Theo Michelot
@@ -64,7 +64,7 @@ Suggests:
     methods,
     mgcv,
     optimx
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.0
 Encoding: UTF-8
 NeedsCompilation: yes
 VignetteBuilder: R.rsp
