@@ -68,6 +68,7 @@ export(CIreal)
 export(MIfitCTHMM)
 export(MIfitHMM)
 export(MIpool)
+export(addSmoothGradient)
 export(checkPar0)
 export(circAngles)
 export(collapseRaster)
@@ -212,6 +213,7 @@ importFrom(stats,update)
 importFrom(stats,var)
 importFrom(utils,available.packages)
 importFrom(utils,capture.output)
+importFrom(utils,head)
 importFrom(utils,packageDescription)
 importFrom(utils,tail)
 useDynLib(momentuHMM)
